<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".JoinNewBoard">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/info_bar_height"
            android:background="@color/blue"
            android:orientation="vertical">

        </LinearLayout>


        <EditText
            android:id="@+id/search_by_id"
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_text"
            android:hint="@string/search_link"
            android:singleLine="true"
            android:textColor="@color/text_black"
            android:textColorHint="@color/text_black_light"
            android:textSize="@dimen/text_size_regular" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/or"
            android:textColor="@color/text_black"
            android:textSize="@dimen/text_size_regular" />


        <EditText
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text"
            android:hint="@string/search_by_name"
            android:singleLine="true"
            android:textColor="@color/text_black"
            android:textColorHint="@color/text_black_light"
            android:textSize="@dimen/text_size_regular" />

        <Button
            android:id="@+id/join_search_button"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="20dp"
            android:background="@drawable/button"
            android:backgroundTint="@color/blue"
            android:text="@string/search"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/search_results"
            android:textColor="@color/text_black"
            android:textSize="@dimen/text_size_regular" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/join_new_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>