<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_bg"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="@dimen/login_page_side_margin"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_largest"/>

        <EditText
            android:id="@+id/login_username"
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="@dimen/edit_text_height"
            android:layout_gravity="center"
            android:background="@drawable/edit_text"
            android:singleLine="true"
            android:textSize="@dimen/text_size_regular"
            android:hint="@string/username"
            android:textColorHint="@color/text_black_light"
            android:inputType="text"
            android:textColor="@color/text_black"
            android:layout_marginTop="@dimen/vertical_margin_more"/>

        <EditText

            android:id="@+id/login_password"
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="@dimen/edit_text_height"
            android:layout_gravity="center"
            android:background="@drawable/edit_text"
            android:singleLine="true"
            android:inputType="textPassword"
            android:textSize="@dimen/text_size_regular"
            android:hint="@string/password"
            android:textColorHint="@color/text_black_light"
            android:textColor="@color/text_black"
            android:layout_marginTop="@dimen/vertical_margin"/>

        <TextView
            android:id="@+id/login_forgot_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_margin_more"
            android:layout_gravity="center"
            android:text="@string/forgot_password"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_small"
            />

        <Button
            android:id="@+id/login_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:backgroundTint="@color/orange"
            android:layout_marginTop="@dimen/vertical_margin"
            android:layout_gravity="center"
            android:text="@string/login"
            android:textColor="@color/text_white"/>

        <TextView
            android:id="@+id/login_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_margin_more"
            android:layout_gravity="center"
            android:text="@string/no_ID"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_small"
            />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>