<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_bg"
    tools:context=".SignupActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="@dimen/login_page_side_margin"
        >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_largest"/>

    <EditText
        android:id="@+id/signup_name"
        android:layout_width="@dimen/edit_text_width"
        android:layout_height="@dimen/edit_text_height"
        android:background="@drawable/login_edit_text"
        android:singleLine="true"
        android:textSize="@dimen/text_size_regular"
        android:hint="@string/signup_username"
        android:textColorHint="@color/text_black_light"
        android:inputType="text"
        android:textColor="@color/text_black"
        android:layout_marginTop="@dimen/vertical_margin_more"/>
    <EditText
        android:id="@+id/signup_username"
        android:layout_width="@dimen/edit_text_width"
        android:layout_height="@dimen/edit_text_height"
        android:background="@drawable/login_edit_text"
        android:singleLine="true"
        android:textSize="@dimen/text_size_regular"
        android:hint="@string/signup_username"
        android:textColorHint="@color/text_black_light"
        android:inputType="text"
        android:textColor="@color/text_black"
        android:layout_marginTop="@dimen/vertical_margin"/>

    <EditText

        android:id="@+id/signup_password"
        android:layout_width="@dimen/edit_text_width"
        android:layout_height="@dimen/edit_text_height"
        android:background="@drawable/login_edit_text"
        android:singleLine="true"
        android:inputType="textPassword"
        android:textSize="@dimen/text_size_regular"
        android:hint="@string/signup_password"
        android:textColorHint="@color/text_black_light"
        android:textColor="@color/text_black"
        android:layout_marginTop="@dimen/vertical_margin"/>

        <EditText
            android:id="@+id/signup_confirm_password"
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="@dimen/edit_text_height"
            android:background="@drawable/login_edit_text"
            android:singleLine="true"
            android:inputType="textPassword"
            android:textSize="@dimen/text_size_regular"
            android:hint="@string/signup_confirm_password"
            android:textColorHint="@color/text_black_light"
            android:textColor="@color/text_black"
            android:layout_marginTop="@dimen/vertical_margin"/>

    <Button
        android:id="@+id/signup_signup_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:backgroundTint="@color/orange"
        android:layout_marginTop="@dimen/vertical_margin"
        android:text="@string/signup"
        android:textColor="@color/text_white"/>

    <TextView
        android:id="@+id/signup_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_margin_more"
        android:text="@string/already_ID"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_small"
        />
        <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/signup_progress"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:visibility="invisible"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>