<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PublishNewNotice">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/info_bar_height"
            android:background="@color/blue"
            android:orientation="vertical"
            android:elevation="@dimen/elevation">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="50dp"
                android:gravity="center_vertical"

                android:text="publish new notice"
                android:textColor="@color/text_white"
                android:textSize="@dimen/text_size_large"/>
        </LinearLayout>



        <EditText
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_text"
            android:hint="@string/notice_title"
            android:singleLine="true"
            android:textColor="@color/text_black"
            android:textColorHint="@color/text_black_light"
            android:textSize="@dimen/text_size_regular" />

        <EditText
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_text"

            android:hint="@string/subject"
            android:singleLine="false"
            android:textColor="@color/text_black"
            android:textColorHint="@color/text_black_light"
            android:textSize="@dimen/text_size_regular" />

        <EditText
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="150dp"
            android:layout_marginTop="20dp"

            android:background="@drawable/edit_text"
            android:backgroundTint="@color/blue"
            android:hint="description(optional)"
            android:singleLine="false"

            android:textColor="@color/text_white"
            android:textColorHint="@color/text_white_light"
            android:textSize="@dimen/text_size_regular" />

        <Button
            android:id="@+id/publish_notice_button"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="30dp"
            android:background="@drawable/button"
            android:backgroundTint="@color/blue"
            android:text="@string/publish"
            android:textColor="@color/white" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>